force-app/main/default/objects/BPMN_Element__c/BPMN_Element__c.object-meta.xml
<!--
================================================================================
  OBJECT: BPMN_Element__c
  DESCRIPTION: Individual shapes/nodes in a BPMN process diagram
  
  AUTHOR: Dennis van Musschenbroek (DvM) - Cobra CRM B.V.
  CREATED: 2024-12-12
  VERSION: 1.0.0
  API VERSION: 62.0
  
  EXPLANATION:
  ============
  This object stores individual BPMN elements (shapes) that appear on a process
  diagram. While Canvas_JSON__c on Process__c is the source of truth for the
  visual editor, these records enable:
  
  - Native Salesforce reporting on process elements
  - SOQL queries across processes (e.g., find all Approval tasks)
  - Linking process steps to other Salesforce records
  - Process metrics and analytics
  - Version comparison
  
  BPMN 2.0 ELEMENT TYPES:
  =======================
  Events: StartEvent, EndEvent, IntermediateEvent, TimerEvent, MessageEvent
  Activities: UserTask, ServiceTask, ManualTask, SubProcess, CallActivity
  Gateways: ExclusiveGateway (XOR), ParallelGateway (AND), InclusiveGateway (OR)
  Data: DataObject, DataStore
  Swimlanes: Pool, Lane
  Artifacts: TextAnnotation
  
  RELATIONSHIPS:
  ==============
  - Process__c (Master-Detail) - Parent process
  - Outgoing_Connections (Lookup from BPMN_Connection__c)
  - Incoming_Connections (Lookup from BPMN_Connection__c)
-->
<CustomObject>
    <description>Individual BPMN elements (shapes) within a process diagram. Includes events, activities, gateways, and annotations following BPMN 2.0 standard.</description>
    <label>BPMN Element</label>
    <nameField>
        <label>Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BPMN Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>