force-app/main/default/objects/BPMN_Element__c/fields/Assigned_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Role__c</fullName>
    <description>The role, team, or department responsible for performing this task or activity. Used for RACI analysis and workload distribution.</description>
    <inlineHelpText>Who is responsible for this step? (e.g., Sales Rep, Manager, Customer Service)</inlineHelpText>
    <label>Assigned Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>