force-app/main/default/objects/BPMN_Element__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of what happens at this process step, including inputs, outputs, and any business rules that apply.</description>
    <inlineHelpText>Describe what happens at this step in the process.</inlineHelpText>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>