force-app/main/default/objects/BPMN_Element__c/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <description>Expected average duration to complete this task in hours. Used for process time analysis and simulation.</description>
    <inlineHelpText>How long should this step typically take? (in hours)</inlineHelpText>
    <label>Duration (Hours)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>