force-app/main/default/objects/BPMN_Element__c/fields/Element_Id__c.field-meta.xml
<CustomField>
    <fullName>Element_Id__c</fullName>
    <description>Unique identifier used to link this Salesforce record to the corresponding element in the Canvas_JSON. Generated client-side when element is created.</description>
    <externalId>true</externalId>
    <inlineHelpText>System field - unique ID matching the canvas element.</inlineHelpText>
    <label>Element ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>