force-app/main/default/objects/BPMN_Element__c/fields/Element_Type__c.field-meta.xml
<CustomField>
    <fullName>Element_Type__c</fullName>
    <description>The BPMN 2.0 element type classification. Determines the visual shape and semantic meaning of the element.</description>
    <inlineHelpText>Select the BPMN element type.</inlineHelpText>
    <label>Element Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <!-- ===== EVENTS ===== -->
            <value>
                <fullName>StartEvent</fullName>
                <label>Start Event</label>
            </value>
            <value>
                <fullName>EndEvent</fullName>
                <label>End Event</label>
            </value>
            <value>
                <fullName>IntermediateThrowEvent</fullName>
                <label>Intermediate Throw Event</label>
            </value>
            <value>
                <fullName>IntermediateCatchEvent</fullName>
                <label>Intermediate Catch Event</label>
            </value>
            <value>
                <fullName>TimerStartEvent</fullName>
                <label>Timer Start Event</label>
            </value>
            <value>
                <fullName>TimerIntermediateEvent</fullName>
                <label>Timer Intermediate Event</label>
            </value>
            <value>
                <fullName>MessageStartEvent</fullName>
                <label>Message Start Event</label>
            </value>
            <value>
                <fullName>MessageIntermediateEvent</fullName>
                <label>Message Intermediate Event</label>
            </value>
            <value>
                <fullName>MessageEndEvent</fullName>
                <label>Message End Event</label>
            </value>
            <value>
                <fullName>ErrorEndEvent</fullName>
                <label>Error End Event</label>
            </value>
            <value>
                <fullName>TerminateEndEvent</fullName>
                <label>Terminate End Event</label>
            </value>
            <!-- ===== ACTIVITIES ===== -->
            <value>
                <fullName>UserTask</fullName>
                <default>true</default>
                <label>User Task</label>
            </value>
            <value>
                <fullName>ServiceTask</fullName>
                <label>Service Task</label>
            </value>
            <value>
                <fullName>ScriptTask</fullName>
                <label>Script Task</label>
            </value>
            <value>
                <fullName>ManualTask</fullName>
                <label>Manual Task</label>
            </value>
            <value>
                <fullName>BusinessRuleTask</fullName>
                <label>Business Rule Task</label>
            </value>
            <value>
                <fullName>SendTask</fullName>
                <label>Send Task</label>
            </value>
            <value>
                <fullName>ReceiveTask</fullName>
                <label>Receive Task</label>
            </value>
            <value>
                <fullName>SubProcess</fullName>
                <label>Sub-Process</label>
            </value>
            <value>
                <fullName>CallActivity</fullName>
                <label>Call Activity</label>
            </value>
            <!-- ===== GATEWAYS ===== -->
            <value>
                <fullName>ExclusiveGateway</fullName>
                <label>Exclusive Gateway (XOR)</label>
            </value>
            <value>
                <fullName>ParallelGateway</fullName>
                <label>Parallel Gateway (AND)</label>
            </value>
            <value>
                <fullName>InclusiveGateway</fullName>
                <label>Inclusive Gateway (OR)</label>
            </value>
            <value>
                <fullName>EventBasedGateway</fullName>
                <label>Event-Based Gateway</label>
            </value>
            <value>
                <fullName>ComplexGateway</fullName>
                <label>Complex Gateway</label>
            </value>
            <!-- ===== DATA OBJECTS ===== -->
            <value>
                <fullName>DataObject</fullName>
                <label>Data Object</label>
            </value>
            <value>
                <fullName>DataStore</fullName>
                <label>Data Store</label>
            </value>
            <value>
                <fullName>DataInput</fullName>
                <label>Data Input</label>
            </value>
            <value>
                <fullName>DataOutput</fullName>
                <label>Data Output</label>
            </value>
            <!-- ===== SWIMLANES ===== -->
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Lane</fullName>
            </value>
            <!-- ===== ARTIFACTS ===== -->
            <value>
                <fullName>TextAnnotation</fullName>
                <label>Text Annotation</label>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>