force-app/main/default/objects/BPMN_Element__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Height of the element on the canvas in pixels.</description>
    <label>Height</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>