force-app/main/default/objects/BPMN_Element__c/fields/Position_X__c.field-meta.xml
<CustomField>
    <fullName>Position_X__c</fullName>
    <description>X coordinate position of the element's center on the canvas (in pixels from origin).</description>
    <label>Position X</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>