force-app/main/default/objects/BPMN_Element__c/fields/Position_Y__c.field-meta.xml
<CustomField>
    <fullName>Position_Y__c</fullName>
    <description>Y coordinate position of the element's center on the canvas (in pixels from origin).</description>
    <label>Position Y</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>