force-app/main/default/objects/BPMN_Element__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>The parent process this element belongs to. Deleting the process will cascade delete all elements.</description>
    <label>Process</label>
    <referenceTo>Process__c</referenceTo>
    <relationshipLabel>BPMN Elements</relationshipLabel>
    <relationshipName>BPMN_Elements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>