force-app/main/default/objects/BPMN_Element__c/fields/SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Hours__c</fullName>
    <description>Service Level Agreement - maximum hours allowed to complete this task. Used for SLA monitoring and escalation rules.</description>
    <inlineHelpText>What is the maximum time allowed for this step? (SLA in hours)</inlineHelpText>
    <label>SLA (Hours)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>