force-app/main/default/objects/BPMN_Element__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Numeric value indicating the logical sequence of this element in the process flow. Calculated based on distance from start event.</description>
    <inlineHelpText>Sequence order in the process flow.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>