force-app/main/default/objects/BPMN_Element__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>Width of the element on the canvas in pixels.</description>
    <label>Width</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>